--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,31 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 2000px;
 }
 
+@layer components{
+  .mr-center{
+    @apply mr-auto ml-auto
+  }
+}
+
+.text-tranfrom{
+  transform: rotate(270deg);
+}
+
+.container{
+  max-width: 1140px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
